我是小王，我完成了注册功能

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-</head>
+</head> 
 <body>
     <div>完成基本功能的构建</div>
+    <div>这是注册功能</div>
 </body>
 </html>
